compressing docker commands and adding other tools

--- a/images/terminal/Dockerfile.390
+++ b/images/terminal/Dockerfile.390
@@ -6,14 +6,20 @@ ENV GOPATH=/go
 
 RUN  mkdir /go && chmod 755 /go && yum install -y git golang-bin && go get github.com/yudai/gotty && yum clean all && mkdir /workspace && chmod 777 workspace
 
-RUN curl -sL -o /tmp/oc.tar.gz https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/linux-s390x/oc.tar.gz
-RUN tar -C /tmp -xf /tmp/oc.tar.gz --no-same-owner
-RUN mv /tmp/oc /usr/local/bin
-RUN chmod +x /usr/local/bin/oc
-RUN rm /tmp/*
+RUN curl -sL -o /tmp/oc.tar.gz https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/linux-s390x/oc.tar.gz && \
+tar -C /tmp -xf /tmp/oc.tar.gz --no-same-owner && \
+mv /tmp/oc /usr/local/bin && \
+chmod +x /usr/local/bin/oc && \
+rm /tmp/*
 
-RUN curl -sL -o /usr/local/bin/odo https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-linux-s390x
-RUN chmod +x /usr/local/bin/odo
+RUN curl -sL -o /usr/local/bin/odo https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-linux-s390x && \
+chmod +x /usr/local/bin/odo
+
+RUN dnf -y install podman container-selinux --enablerepo updates-testing
+
+RUN dnf -y install buildah container-selinux --enablerepo updates-testing
+
+RUN dnf -y install skopeo container-selinux --enablerepo updates-testing
 
 WORKDIR /workspace
 
