--- a/images/terminal/Dockerfile.390
+++ b/images/terminal/Dockerfile.390
@@ -12,6 +12,12 @@ mv /tmp/oc /usr/local/bin && \
 chmod +x /usr/local/bin/oc && \
 rm /tmp/*
 
+RUN cd /workspace && mkdir tkn-temp && cd tkn-temp\
+curl -LO https://github.com/tektoncd/cli/releases/download/v0.12.0/tkn_0.12.0_Linux_s390x.tar.gz && \
+tar xvzf tkn_0.12.0_Linux_s390x.tar.gz && \
+mv tkn /usr/local/bin && \
+chmod u+x /usr/local/bin/tkn && cd .. && rm -rf tkn-temp
+
 RUN curl -sL -o /usr/local/bin/odo https://mirror.openshift.com/pub/openshift-v4/clients/odo/latest/odo-linux-s390x && \
 chmod +x /usr/local/bin/odo
 
