--- a/images/terminal/Dockerfile.390
+++ b/images/terminal/Dockerfile.390
@@ -12,7 +12,7 @@ mv /tmp/oc /usr/local/bin && \
 chmod +x /usr/local/bin/oc && \
 rm /tmp/*
 
-RUN cd /workspace && mkdir tkn-temp && cd tkn-temp\
+RUN cd /workspace && mkdir tkn-temp && cd tkn-temp && \
 curl -LO https://github.com/tektoncd/cli/releases/download/v0.12.0/tkn_0.12.0_Linux_s390x.tar.gz && \
 tar xvzf tkn_0.12.0_Linux_s390x.tar.gz && \
 mv tkn /usr/local/bin && \
@@ -26,6 +26,8 @@ RUN dnf -y install podman container-selinux --enablerepo updates-testing
 RUN dnf -y install buildah container-selinux --enablerepo updates-testing
 
 RUN dnf -y install skopeo container-selinux --enablerepo updates-testing
+
+RUN chmod a+w /etc/hosts
 
 WORKDIR /workspace
 
