--- a/setup/playbooks/roles/deploy_codeready_operator/tasks/main.yml
+++ b/setup/playbooks/roles/deploy_codeready_operator/tasks/main.yml
@@ -38,6 +38,10 @@
     path: "{{ role_path }}/files/crwoperator.yaml"
     state: present
 
+- name: pause
+  pause:
+    minutes: "2"
+    
 # Create the Codeready CheCluster
 - name: Create CodeReady CRD
   k8s:
@@ -66,7 +70,7 @@
     wait: yes
 
 - name: pause
-  pause: 
+  pause:
     minutes: "1"
 
 - name: Import Quarkus Stack image
