Installed Fuse Online operator and restored essentials workshop

--- a/setup/playbooks/Deploy_Advanced_Course.yml
+++ b/setup/playbooks/Deploy_Advanced_Course.yml
@@ -3,9 +3,9 @@
 
   roles:
     - login_ocp
+    - deploy_fuseonline_operator
     - deploy_serverless_operator
     - deploy_serverlesseventing_operator
     - deploy_camelk_operator
     - deploy_service_mesh
-    
     
