--- a/setup/playbooks/roles/deploy_fuseonline_operator/files/fuseonlineoperatorgroup2.yaml
+++ b/setup/playbooks/roles/deploy_fuseonline_operator/files/fuseonlineoperatorgroup2.yaml
@@ -2,8 +2,8 @@
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  name: fuseonlineoperatorgroup
-  namespace: fuseonline
+  name: fuseonlineoperatorgroup2
+  namespace: team2
 spec:
   targetNamespaces:
-  - fuseonline
+  - team2
