--- a/setup/playbooks/Deploy_Advanced_Course.yml
+++ b/setup/playbooks/Deploy_Advanced_Course.yml
@@ -4,6 +4,8 @@
   roles:
     - login_ocp
     - deploy_fuseonline_operator
+    - deploy_amqbroker_operator
+    - deploy_amqstreams_operator
     - deploy_serverless_operator
     - deploy_camelk_operator
     - deploy_service_mesh
