--- a/setup/playbooks/roles/deploy_amqbroker_operator/files/amqbrokeroperator5.yaml
+++ b/setup/playbooks/roles/deploy_amqbroker_operator/files/amqbrokeroperator5.yaml
@@ -1,11 +1,11 @@
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
-  name: amq-streams
+  name: amq-broker
+  namespace: team5
 spec:
-  channel: stable
-  installPlanApproval: Automatic
-  name: amq-streams
+  channel: current
+  name: amq-broker
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: amqstreams.v1.5.3
+  startingCSV: amq-broker-operator.v0.17.0
