--- a/setup/playbooks/roles/deploy_amqstreams_operator/tasks/main.yml
+++ b/setup/playbooks/roles/deploy_amqstreams_operator/tasks/main.yml
@@ -2,16 +2,256 @@
 # file: main.yml
 
 # Deploy AMQ Streams Operator
-#- name: Deploy AMQ Streams Operator
-#  k8s:
-#    api_key: "{{ ocp_login_token }}"
-#    host: "{{ ocp_url }}"
-#    validate_certs: no
-#    state: present
-#    src: "{{ role_path }}/files/amqstreamsoperator.yaml"
-
-# Using oc via shell as k8s modile is causing error on the mac from some reason
-
-# Wait for Knative serving to be ready before continuing
 - name: Deploy AMQ Streams Operator
   shell: oc apply -f {{ role_path }}/files/amqstreamsoperator.yaml -n openshift-operators
+
+# Deploy Artemis Instance for each team
+- name: Deploy Artemis for team 1
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/artemis1.yaml"
+
+- name: Deploy Artemis for team 2
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/artemis2.yaml"
+
+- name: Deploy Artemis for team 3
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/artemis3.yaml"
+
+- name: Deploy Artemis for team 4
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/artemis4.yaml"
+
+- name: Deploy Artemis for team 5
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/artemis5.yaml"
+
+- name: Deploy Artemis for team 6
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/artemis6.yaml"
+
+- name: Deploy Artemis for team 7
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/artemis7.yaml"
+
+- name: Deploy Artemis for team 8
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/artemis8.yaml"
+
+- name: Deploy Artemis for team 9
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/artemis9.yaml"
+
+- name: Deploy Artemis for team 10
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/artemis10.yaml"
+
+# Deploy Kafka Instance for each team
+- name: Deploy kafka instance for team 1
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/kafka1.yaml"
+
+- name: Deploy kafka instance for team 2
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/kafka2.yaml"
+
+- name: Deploy kafka instance for team 3
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/kafka3.yaml"
+
+- name: Deploy kafka instance for team 4
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/kafka4.yaml"
+  
+- name: Deploy kafka instance for team 5
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/kafka5.yaml"
+
+- name: Deploy kafka instance for team 6
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/kafka6.yaml"
+
+- name: Deploy kafka instance for team 7
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/kafka7.yaml"
+
+- name: Deploy kafka instance for team 8
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/kafka8.yaml"
+
+- name: Deploy kafka instance for team 9
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/kafka9.yaml"
+
+- name: Deploy kafka instance for team 10
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/kafka10.yaml"
+
+- name: pause
+  pause:
+    minutes: "3"
+
+# Deploy Kafka topic for each team
+- name: Deploy kafka topic for team 1
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/topic1.yaml"
+
+- name: Deploy kafka topic for team 2
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/topic2.yaml"
+
+- name: Deploy kafka topic for team 3
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/topic3.yaml"
+
+- name: Deploy kafka topic for team 4
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/topic4.yaml"
+
+- name: Deploy kafka topic for team 5
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/topic5.yaml"
+
+- name: Deploy kafka topic for team 6
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/topic6.yaml"
+
+- name: Deploy kafka topic for team 7
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/topic7.yaml"
+
+- name: Deploy kafka topic for team 8
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/topic8.yaml"
+
+- name: Deploy kafka topic for team 9
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/topic9.yaml"
+
+- name: Deploy kafka topic for team 10
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/topic10.yaml"
+
+- name: pause
+  pause:
+    minutes: "3"
