--- a/setup/playbooks/roles/deploy_fuseonline_operator/files/fuseonlineoperator2.yaml
+++ b/setup/playbooks/roles/deploy_fuseonline_operator/files/fuseonlineoperator2.yaml
@@ -3,7 +3,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: fuse-online
-  namespace: fuseonline
+  namespace: team2
 spec:
   channel: alpha
   installPlanApproval: Automatic
