--- a/setup/playbooks/roles/deploy_fuseonline_operator/tasks/main.yml
+++ b/setup/playbooks/roles/deploy_fuseonline_operator/tasks/main.yml
@@ -1,60 +1,360 @@
 ---
   # file: main.yml
 
-- name: Create Knative serving namespace
+# Deploy Fuse Online Operator Group 
+- name: Deploy Fuse Online Operator Group
   k8s:
     api_key: "{{ ocp_login_token }}"
     host: "{{ ocp_url }}"
     validate_certs: no
     state: present
-    src: "{{ role_path }}/files/fuseonlinenamespace.yaml"
+    src: "{{ role_path }}/files/fuseonlineoperatorgroup1.yaml"
 
-- name: Wait for namespace to be created
+- name: Wait for Fuse Online group to be deployed for team1
   wait_for:
-    path: "{{ role_path }}/files/fuseonlinenamespace.yaml"
+    path: "{{ role_path }}/files/fuseonlineoperatorgroup1.yaml"
+    state: present
+
+- name: Deploy Fuse Online Operator Group
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuseonlineoperatorgroup2.yaml"
+
+- name: Wait for Fuse Online group to be deployed for team2
+  wait_for:
+    path: "{{ role_path }}/files/fuseonlineoperatorgroup2.yaml"
     state: present
   
-- name: Deploy fuseonline Operator Group
+- name: Deploy Fuse Online Operator Group
   k8s:
     api_key: "{{ ocp_login_token }}"
     host: "{{ ocp_url }}"
     validate_certs: no
     state: present
-    src: "{{ role_path }}/files/fuseonlineoperatorgroup.yaml"
+    src: "{{ role_path }}/files/fuseonlineoperatorgroup3.yaml"
 
-- name: Wait for fuseonline Operator Group to be deployed
+- name: Wait for Fuse Online group to be deployed for team3
   wait_for:
-    path: "{{ role_path }}/files/fuseonlineoperatorgroup.yaml"
+    path: "{{ role_path }}/files/fuseonlineoperatorgroup3.yaml"
     state: present
 
-- name: Deploy Fuse Online Operator
+- name: Deploy Fuse Online Operator Group
   k8s:
     api_key: "{{ ocp_login_token }}"
     host: "{{ ocp_url }}"
     validate_certs: no
     state: present
-    src: "{{ role_path }}/files/fuseonlineoperator.yaml"
+    src: "{{ role_path }}/files/fuseonlineoperatorgroup4.yaml"
 
-- name: Wait for Fuse Online Operator to deploy
+- name: Wait for Fuse Online group to be deployed for team4
   wait_for:
-    path: "{{ role_path }}/files/fuseonlineoperator.yaml"
+    path: "{{ role_path }}/files/fuseonlineoperatorgroup4.yaml"
+    state: present
+
+- name: Deploy Fuse Online Operator Group
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuseonlineoperatorgroup5.yaml"
+
+- name: Wait for Fuse Online group to be deployed for team5
+  wait_for:
+    path: "{{ role_path }}/files/fuseonlineoperatorgroup5.yaml"
+    state: present
+
+- name: Deploy Fuse Online Operator Group
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuseonlineoperatorgroup6.yaml"
+
+- name: Wait for Fuse Online group to be deployed for team6
+  wait_for:
+    path: "{{ role_path }}/files/fuseonlineoperatorgroup6.yaml"
+    state: present
+
+- name: Deploy Fuse Online Operator Group
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuseonlineoperatorgroup7.yaml"
+
+- name: Wait for Fuse Online group to be deployed for team7
+  wait_for:
+    path: "{{ role_path }}/files/fuseonlineoperatorgroup7.yaml"
+    state: present
+
+- name: Deploy Fuse Online Operator Group
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuseonlineoperatorgroup8.yaml"
+
+- name: Wait for Fuse Online group to be deployed for team8
+  wait_for:
+    path: "{{ role_path }}/files/fuseonlineoperatorgroup8.yaml"
+    state: present
+
+- name: Deploy Fuse Online Operator Group
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuseonlineoperatorgroup9.yaml"
+
+- name: Wait for Fuse Online group to be deployed for team9
+  wait_for:
+    path: "{{ role_path }}/files/fuseonlineoperatorgroup9.yaml"
+    state: present
+
+- name: Deploy Fuse Online Operator Group
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuseonlineoperatorgroup10.yaml"
+
+- name: Wait for Fuse Online group to be deployed for team10
+  wait_for:
+    path: "{{ role_path }}/files/fuseonlineoperatorgroup10.yaml"
     state: present
 
 - name: pause
   pause:
-    minutes: "2"
+    minutes: "3"
+
+# Deploy Fuse Online operator
+- name: Deploy Fuse Online for team 1
+  shell: oc apply -f {{ role_path }}/files/fuseonlineoperator1.yaml -n team1
+
+- name: Deploy Fuse Online for team 2
+  shell: oc apply -f {{ role_path }}/files/fuseonlineoperator2.yaml -n team2
+
+- name: Deploy Fuse Online for team 3
+  shell: oc apply -f {{ role_path }}/files/fuseonlineoperator3.yaml -n team3
+
+- name: Deploy Fuse Online for team 4
+  shell: oc apply -f {{ role_path }}/files/fuseonlineoperator4.yaml -n team4
+
+- name: Deploy Fuse Online for team 5
+  shell: oc apply -f {{ role_path }}/files/fuseonlineoperator5.yaml -n team5
+
+- name: Deploy Fuse Online for team 6
+  shell: oc apply -f {{ role_path }}/files/fuseonlineoperator6.yaml -n team6
+
+- name: Deploy Fuse Online for team 7
+  shell: oc apply -f {{ role_path }}/files/fuseonlineoperator7.yaml -n team7
+
+- name: Deploy Fuse Online for team 8
+  shell: oc apply -f {{ role_path }}/files/fuseonlineoperator8.yaml -n team8
+
+- name: Deploy Fuse Online for team 9
+  shell: oc apply -f {{ role_path }}/files/fuseonlineoperator9.yaml -n team9
+
+- name: Deploy Fuse Online for team 10
+  shell: oc apply -f {{ role_path }}/files/fuseonlineoperator10.yaml -n team10
+
+- name: pause
+  pause:
+    minutes: "3"
   
 # Create the Fuse Online Syndesis
-- name: Create Fuse Online Syndesis
+- name: Create Fuse Online Syndesis for team1
   k8s:
     api_key: "{{ ocp_login_token }}"
     host: "{{ ocp_url }}"
     validate_certs: no
     state: present
-    src: "{{ role_path }}/files/syndesis.yaml"
+    src: "{{ role_path }}/files/syndesis1.yaml"
+    wait: yes
+
+- name: Create Fuse Online Syndesis for team2
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/syndesis2.yaml"
+    wait: yes
+
+- name: Create Fuse Online Syndesis for team3
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/syndesis3.yaml"
+    wait: yes
+
+- name: Create Fuse Online Syndesis for team4
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/syndesis4.yaml"
+    wait: yes
+
+- name: Create Fuse Online Syndesis for team5
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/syndesis5.yaml"
+    wait: yes
+
+- name: Create Fuse Online Syndesis for team6
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/syndesis6.yaml"
+    wait: yes
+
+- name: Create Fuse Online Syndesis for team7
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/syndesis7.yaml"
+    wait: yes
+
+- name: Create Fuse Online Syndesis for team8
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/syndesis8.yaml"
+    wait: yes
+
+- name: Create Fuse Online Syndesis for team9
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/syndesis9.yaml"
+    wait: yes
+
+- name: Create Fuse Online Syndesis for team10
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/syndesis10.yaml"
     wait: yes
 
 - name: pause
   pause:
     minutes: "2"
+
+# Create group role bindings for Fuse online access
+- name: Role binding for team1
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuserolebinding1.yaml"
+    wait: yes
+
+- name: Role binding for team2
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuserolebinding2.yaml"
+    wait: yes
+
+- name: Role binding for team3
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuserolebinding3.yaml"
+    wait: yes
+
+- name: Role binding for team4
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuserolebinding4.yaml"
+    wait: yes
+
+- name: Role binding for team5
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuserolebinding5.yaml"
+    wait: yes
+
+- name: Role binding for team6
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuserolebinding6.yaml"
+    wait: yes
+
+- name: Role binding for team7
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuserolebinding7.yaml"
+    wait: yes
+
+- name: Role binding for team8
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuserolebinding8.yaml"
+    wait: yes
+
+- name: Role binding for team9
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuserolebinding9.yaml"
+    wait: yes
+
+- name: Role binding for team10
+  k8s:
+    api_key: "{{ ocp_login_token }}"
+    host: "{{ ocp_url }}"
+    validate_certs: no
+    state: present
+    src: "{{ role_path }}/files/fuserolebinding1.yaml"
+    wait: yes
+
 
