--- a/setup/playbooks/roles/deploy_amqbroker_operator/files/amqbrokeroperator9.yaml
+++ b/setup/playbooks/roles/deploy_amqbroker_operator/files/amqbrokeroperator9.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
@@ -5,6 +6,7 @@ metadata:
   namespace: team9
 spec:
   channel: current
+  installPlanApproval: Automatic
   name: amq-broker
   source: redhat-operators
   sourceNamespace: openshift-marketplace
