Create taskX-infra, add the extra rolebinding, and change rolebindings to be group-based, not user-based

--- a/setup/playbooks/roles/users/tasks/main.yml
+++ b/setup/playbooks/roles/users/tasks/main.yml
@@ -11,7 +11,7 @@
     state: present
     definition: "{{ lookup('template', 'groups.yml.j2') }}"
 
-- name: role bindings
+- name: Create role bindings
   k8s:
     state: present
     definition: "{{ lookup('template', 'rolebindings.yml.j2') }}"
