Change roles back to being user-based.
NB. Group-based might be 'right' but I don't know the impact!

--- a/setup/playbooks/roles/users/tasks/main.yml
+++ b/setup/playbooks/roles/users/tasks/main.yml
@@ -5,13 +5,16 @@
   k8s:
     state: present
     definition: "{{ lookup('template', 'projects.yml.j2') }}"
+  loop: "{{ labs_teams }}"
 
 - name: Create groups
   k8s:
     state: present
     definition: "{{ lookup('template', 'groups.yml.j2') }}"
+  loop: "{{ labs_teams }}"
 
 - name: Create role bindings
   k8s:
     state: present
     definition: "{{ lookup('template', 'rolebindings.yml.j2') }}"
+  loop: "{{ labs_teams }}"
