Setup changes to operator changes for 4.6

--- a/setup/playbooks/roles/deploy_service_mesh/files/istio-installation.yaml
+++ b/setup/playbooks/roles/deploy_service_mesh/files/istio-installation.yaml
@@ -1,51 +1,25 @@
 apiVersion: maistra.io/v2
 kind: ServiceMeshControlPlane
 metadata:
-  name: full-install
   namespace: istio-system
+  name: basic
 spec:
-  istio:
-    global:
-      proxy:
-        resources:
-          requests:
-            cpu: 100m
-            memory: 128Mi
-          limits:
-            cpu: 500m
-            memory: 128Mi
-
-    gateways:
-      istio-egressgateway:
-        autoscaleEnabled: false
-      istio-ingressgateway:
-        autoscaleEnabled: false
-
-    mixer:
-      policy:
-        autoscaleEnabled: false
-
-      telemetry:
-        autoscaleEnabled: false
-        resources:
-          requests:
-            cpu: 100m
-            memory: 1G
-          limits:
-            cpu: 500m
-            memory: 4G
-
-    pilot:
-      autoscaleEnabled: false
-      traceSampling: 100
-
-    kiali:
-      enabled: true
-
+  tracing:
+    sampling: 10000
+    type: Jaeger
+  policy:
+    type: Istiod
+  addons:
     grafana:
       enabled: true
-
-    tracing:
+    jaeger:
+      install:
+        storage:
+          type: Memory
+    kiali:
       enabled: true
-      jaeger:
-        template: all-in-one
+    prometheus:
+      enabled: true
+  version: v2.0
+  telemetry:
+    type: Istiod
