--- a/setup/playbooks/roles/deploy_service_mesh/files/servicemesh.yaml
+++ b/setup/playbooks/roles/deploy_service_mesh/files/servicemesh.yaml
@@ -4,7 +4,7 @@ metadata:
   name: servicemesh
   namespace: openshift-operators
 spec:
-  channel: "1.0"
+  channel: "stable"
   name: servicemeshoperator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
