Amended Quarkus title in modules

--- a/labs/_modules.yml
+++ b/labs/_modules.yml
@@ -41,7 +41,7 @@ modules:
   quay:
     name: OpenShift and the Quay Image Repository
   quarkus:
-    name: Introduction to Quarkus on OpenShift
+    name: Quarkus on OpenShift
   codereadyworkspaces:
     name: CodeReady Workspaces
   kogito:
