--- a/setup/playbooks/roles/deploy_codeready_operator/files/stack.imagestream.yaml
+++ b/setup/playbooks/roles/deploy_codeready_operator/files/stack.imagestream.yaml
@@ -10,8 +10,8 @@ spec:
       description: Quarkus stack for Java and CodeReady Workspaces
       supports: java
       tags: builder,java
-      version: "1.0"
+      version: "2.1"
     from:
       kind: DockerImage
-      name: docker.io/schtool/che-quarkus-workshop:1.0.0.CR1
-    name: "1.0"
+      name: quay.io/openshiftlabs/quarkus-workshop-stack:2.1
+    name: "2.1"
